--- a/src/main/java/shredding/club/snowcon/view/Dashboard.fxml
+++ b/src/main/java/shredding/club/snowcon/view/Dashboard.fxml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.DashboardController" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.DashboardController">
+   <children>
+      <ImageView id="beechWeatherIcon" fx:id="beechWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="242.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@resources/weather_icons/c04n.png" />
+         </image>
+      </ImageView>
+      <ImageView id="appSkiWeatherIcon" fx:id="appSkiWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="39.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@resources/weather_icons/c02d.png" />
+         </image>
+      </ImageView>
+      <ImageView id="sugarWeatherIcon" fx:id="sugarWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="442.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@resources/weather_icons/s04d.png" />
+         </image>
+      </ImageView>
+      <Label id="appSkiTitle" alignment="CENTER" layoutX="23.0" layoutY="38.0" prefHeight="46.0" prefWidth="183.0" text="Appalachian Ski Mountain" />
+      <Label id="beechTitle" alignment="CENTER" layoutX="206.0" layoutY="39.0" prefHeight="46.0" prefWidth="183.0" text="Beech Ski Mountain" />
+      <Label id="sugarTitle" alignment="CENTER" layoutX="407.0" layoutY="39.0" prefHeight="46.0" prefWidth="183.0" text="Sugar Ski Mountain" />
+      <Label alignment="CENTER" layoutX="45.0" layoutY="192.0" text="Weather Overview:" />
+      <Label alignment="CENTER" layoutX="248.0" layoutY="192.0" text="Weather Overview:" />
+      <Label alignment="CENTER" layoutX="448.0" layoutY="192.0" text="Weather Overview:" />
+      <Button fx:id="viewAppSkiConditions" alignment="CENTER" layoutX="39.0" layoutY="336.0" mnemonicParsing="false" onAction="#seeAppSkiConditions" prefHeight="25.0" prefWidth="112.0" text="View Conditions" />
+      <Button fx:id="viewBeechConditions" alignment="CENTER" layoutX="244.0" layoutY="336.0" mnemonicParsing="false" onAction="#seeBeechConditions" prefHeight="25.0" prefWidth="112.0" text="View Conditions" />
+      <Button fx:id="viewSugarConditions" alignment="CENTER" layoutX="443.0" layoutY="336.0" mnemonicParsing="false" onAction="#seeSugarConditions" prefHeight="25.0" prefWidth="112.0" text="View Conditions" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b737b" height="120.0" layoutX="13.0" layoutY="209.0" stroke="BLACK" strokeType="INSIDE" width="164.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b737b" height="120.0" layoutX="216.0" layoutY="209.0" stroke="BLACK" strokeType="INSIDE" width="164.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b737b" height="120.0" layoutX="417.0" layoutY="209.0" stroke="BLACK" strokeType="INSIDE" width="164.0" />
+   </children>
+</AnchorPane>
