--- a/src/main/java/shredding/club/snowcon/view/Dashboard.fxml
+++ b/src/main/java/shredding/club/snowcon/view/Dashboard.fxml
@@ -11,17 +11,17 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.DashboardController">
    <children>
-      <ImageView id="beechWeatherIcon" fx:id="beechWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="242.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="beechWeatherIcon" fx:id="beechWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="242.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@resources/weather_icons/c04n.png" />
          </image>
       </ImageView>
-      <ImageView id="appSkiWeatherIcon" fx:id="appSkiWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="39.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="appSkiWeatherIcon" fx:id="appSkiWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="39.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@resources/weather_icons/c02d.png" />
          </image>
       </ImageView>
-      <ImageView id="sugarWeatherIcon" fx:id="sugarWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="442.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView id="sugarWeatherIcon" fx:id="sugarWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="442.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@resources/weather_icons/s04d.png" />
          </image>
@@ -59,6 +59,31 @@
                </font>
             </Label>
             <Label layoutX="7.0" layoutY="109.0" text="Precipitation:" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="appSkiTemperature" alignment="CENTER" layoutX="103.0" layoutY="8.0" text="(temp)" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="appSkiWindSpeed" alignment="CENTER" layoutX="103.0" layoutY="33.0" text="(temp)" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="appSkiVisibility" alignment="CENTER" layoutX="103.0" layoutY="59.0" text="(temp)" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="appSkiSnow" alignment="CENTER" layoutX="103.0" layoutY="84.0" text="(temp)" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="appSkiPrecipitation" alignment="CENTER" layoutX="103.0" layoutY="109.0" text="(temp)" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font>
@@ -125,5 +150,20 @@
             </Label>
          </children>
       </Group>
+      <Label alignment="CENTER" layoutX="41.0" layoutY="145.0" text="(Blowing Rock, NC)" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="236.0" layoutY="145.0" text="(Beech Mountain, NC)" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="437.0" layoutY="145.0" text="(Sugar Mountain, NC)" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
