--- a/src/main/java/shredding/club/snowcon/view/Dashboard.fxml
+++ b/src/main/java/shredding/club/snowcon/view/Dashboard.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.DashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@resources/styling/Dashboard.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.DashboardController">
    <children>
       <ImageView id="beechWeatherIcon" fx:id="beechWeatherIcon" fitHeight="112.0" fitWidth="119.0" layoutX="242.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -26,12 +26,12 @@
             <Image url="@resources/weather_icons/s04d.png" />
          </image>
       </ImageView>
-      <Label id="appSkiTitle" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="16.0" prefHeight="25.0" prefWidth="183.0" text="Appalachian Ski Mountain" textAlignment="CENTER" />
-      <Label id="beechTitle" alignment="CENTER" layoutX="207.0" layoutY="16.0" prefHeight="25.0" prefWidth="183.0" text="Beech Ski Mountain" />
-      <Label id="sugarTitle" alignment="CENTER" layoutX="407.0" layoutY="16.0" prefHeight="25.0" prefWidth="183.0" text="Sugar Ski Mountain" />
-      <Label alignment="CENTER" layoutX="45.0" layoutY="165.0" text="Weather Overview:" />
-      <Label alignment="CENTER" layoutX="248.0" layoutY="165.0" text="Weather Overview:" />
-      <Label alignment="CENTER" layoutX="448.0" layoutY="165.0" text="Weather Overview:" />
+      <Label id="appSkiTitle" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="16.0" prefHeight="25.0" prefWidth="183.0" text="Appalachian Ski Mountain" textAlignment="CENTER" textFill="WHITE" />
+      <Label id="beechTitle" alignment="CENTER" layoutX="207.0" layoutY="16.0" prefHeight="25.0" prefWidth="183.0" text="Beech Ski Mountain" textFill="WHITE" />
+      <Label id="sugarTitle" alignment="CENTER" layoutX="407.0" layoutY="16.0" prefHeight="25.0" prefWidth="183.0" text="Sugar Ski Mountain" textFill="WHITE" />
+      <Label alignment="CENTER" layoutX="45.0" layoutY="165.0" text="Weather Overview:" textFill="WHITE" />
+      <Label alignment="CENTER" layoutX="248.0" layoutY="165.0" text="Weather Overview:" textFill="WHITE" />
+      <Label alignment="CENTER" layoutX="448.0" layoutY="165.0" text="Weather Overview:" textFill="WHITE" />
       <Button fx:id="viewAppSkiConditions" alignment="CENTER" layoutX="39.0" layoutY="336.0" mnemonicParsing="false" onAction="#seeAppSkiConditions" prefHeight="25.0" prefWidth="112.0" text="View Conditions" />
       <Button fx:id="viewBeechConditions" alignment="CENTER" layoutX="244.0" layoutY="336.0" mnemonicParsing="false" onAction="#seeBeechConditions" prefHeight="25.0" prefWidth="112.0" text="View Conditions" />
       <Button fx:id="viewSugarConditions" alignment="CENTER" layoutX="443.0" layoutY="336.0" mnemonicParsing="false" onAction="#seeSugarConditions" prefHeight="25.0" prefWidth="112.0" text="View Conditions" />
@@ -150,17 +150,17 @@
             </Label>
          </children>
       </Group>
-      <Label alignment="CENTER" layoutX="41.0" layoutY="145.0" text="(Blowing Rock, NC)" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="41.0" layoutY="145.0" text="(Blowing Rock, NC)" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="236.0" layoutY="145.0" text="(Beech Mountain, NC)" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="236.0" layoutY="145.0" text="(Beech Mountain, NC)" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="437.0" layoutY="145.0" text="(Sugar Mountain, NC)" textAlignment="CENTER">
+      <Label alignment="CENTER" layoutX="437.0" layoutY="145.0" text="(Sugar Mountain, NC)" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font>
