--- a/src/main/java/shredding/club/snowcon/view/AppSkiMountain.fxml
+++ b/src/main/java/shredding/club/snowcon/view/AppSkiMountain.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.AppSkiController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@resources/styling/Dashboard.css" fx:controller="shredding.club.snowcon.controller.AppSkiController">
    <children>
       <Button fx:id="backToOverview" layoutX="248.0" layoutY="361.0" mnemonicParsing="false" onAction="#back" text="Back to Weather" />
    </children>
