--- a/src/main/java/shredding/club/snowcon/view/BeechMountain.fxml
+++ b/src/main/java/shredding/club/snowcon/view/BeechMountain.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.BeechMountainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@resources/styling/Dashboard.css" fx:controller="shredding.club.snowcon.controller.BeechMountainController">
    <children>
       <Button fx:id="backToWeather" layoutX="248.0" layoutY="361.0" mnemonicParsing="false" onAction="#back" text="Back to Weather" />
    </children>
