--- a/src/main/java/shredding/club/snowcon/view/AppSkiMountain.fxml
+++ b/src/main/java/shredding/club/snowcon/view/AppSkiMountain.fxml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@resources/styling/Dashboard.css" fx:controller="shredding.club.snowcon.controller.AppSkiController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@resources/styling/Dashboard.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.AppSkiController">
    <children>
       <Button fx:id="backToOverview" layoutX="248.0" layoutY="361.0" mnemonicParsing="false" onAction="#back" text="Back to Weather" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="14.0" text="Slopes:" textAlignment="CENTER" textFill="WHITE" underline="true">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="15.0" layoutY="50.0" text="Appaltizer:" textFill="WHITE" />
+      <Label layoutX="16.0" layoutY="70.0" text="Avery's Appal:" textFill="WHITE" />
+      <Label layoutX="15.0" layoutY="92.0" text="Candied Appal:" textFill="WHITE" />
+      <Label layoutX="14.0" layoutY="116.0" text="Strudel:" textFill="WHITE" />
+      <Label layoutX="14.0" layoutY="140.0" text="Orchard Run:" textFill="WHITE" />
+      <Label layoutX="15.0" layoutY="164.0" text="Lower Big Appal:" textFill="WHITE" />
+      <Label layoutX="14.0" layoutY="187.0" text="Upper Big Appal:" textFill="WHITE" />
+      <Label layoutX="15.0" layoutY="212.0" text="Hard Core:" textFill="WHITE" />
+      <Label layoutX="15.0" layoutY="237.0" text="Thin Slice:" textFill="WHITE" />
+      <Label layoutX="14.0" layoutY="263.0" text="Appaljack:" textFill="WHITE" />
+      <Label layoutX="14.0" layoutY="287.0" text="Appal Jam:" textFill="WHITE" />
+      <Label layoutX="14.0" layoutY="314.0" text="AppalTop:" textFill="WHITE" />
+      <Label layoutX="14.0" layoutY="344.0" text="The Highline:" textFill="WHITE" />
    </children>
 </AnchorPane>
