--- a/src/main/java/shredding/club/snowcon/view/AppSkiMountain.fxml
+++ b/src/main/java/shredding/club/snowcon/view/AppSkiMountain.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@resources/styling/Dashboard.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.AppSkiController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="root" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="shredding.club.snowcon.controller.AppSkiController" stylesheets="@resources/styling/AppSki.css">
    <children>
       <Button fx:id="backToOverview" layoutX="248.0" layoutY="361.0" mnemonicParsing="false" onAction="#back" text="Back to Weather" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="14.0" text="Slopes:" textAlignment="CENTER" textFill="WHITE" underline="true">
+      <Label id="slopeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="14.0" text="Slopes:" textAlignment="CENTER" textFill="WHITE" underline="true">
          <font>
             <Font size="25.0" />
          </font>
